syntax = "proto3";

message IMRequest {
  uint32 type = 1;
  bytes value = 2;
}

// type 1
message LoginRequest {
  string username = 1;
  string password = 2;
  uint32 port = 3;
}

// type 2
message MessageRequest {
  bool broadcast = 1;
  string username = 2;
  string msg = 3;
}

// type 3
message WhoElseRequest {
  bool limitTime = 1;
  uint32 pastSeconds = 2;
  bool currentlyOnline = 3;
}

// type 4
message BlockRequest {
  string username = 1;
}

// type 5
message UnBlockRequest {
  string username = 1;
}

// type 6
message LogOutRequest {
}

// type 7
message GetIPRequest {
  string username = 1;
}

// type 8
message RegisterFileRequest {
  string filename = 1;
  uint32 chunks = 2;
}

// type 9
// TODO: implement generalized [packed repeated value] (en/de)coding in ac_protobuf
message RegisterChunkRequest {
  string filename = 1;
  bytes chunks = 2;
}

// type 10
// TODO: implement generalized [packed repeated value] (en/de)coding in ac_protobuf
message SearchFileRequest {
  string filename = 1;
  bytes chunks = 2;
}
