syntax = "proto3";

message IMResponse {
  uint32 type = 1;
  bool success = 2;
  bytes value = 3;
}

// type 1

message TextResponse {
  string msg = 1;
}

// type 2

message ExitResponse {
  string msg = 1;
}

// type 3

message GetIPResponse {
  string username = 1;
  bytes addr = 2;
}

// type 4

message PrivateRegistrationResponse {
  string username = 1;
}

// type 5

message ChunkDataRequest {
  string filename = 1;
  uint32 chunk = 2;
}

// type 6

message ChunkDataResponse {
  string filename = 1;
  uint32 chunk = 2;
  bytes data = 3;
}
